--- a/static/main.less
+++ b/static/main.less
@@ -94,11 +94,44 @@ body {
   line-height: 1.4;
   font-size: 20px;
   min-height: 100vm;
-  a.eg {
-    font-size: 130%;
+  p {
+    margin: 0;
+    &.eg {
+      margin: 0 0 10px 45px;
+      line-height: 1.3;
+      a {
+        font-size: 125%;
+        display: flex;
+        i {
+          margin-right: 8px;
+          margin-top: 4px;
+        }
+      }
+
+    }
   }
   .ps {
     margin-top: 50px;
+  }
+  ul {
+    margin: 0 0 30px;
+    li {
+      list-style-type: none;
+      line-height: 1.8;
+      .tab {
+        border-radius: 20px 0 0 20px;
+        color: #fff;
+        padding: 3px 6px 3px 9px;
+        font-size: 16px;
+        &.green {background: @oaGreen;}
+        &.gray {background: #888;}
+      }
+      .text {
+        font-weight: bold;
+        &.green {color: @oaGreen;}
+        &.gray {color: #888;}
+      }
+    }
   }
 }
 
