--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
 <head>
     <base href="/"> <!-- needed for html5 pretty urls -->
     <meta charset="utf-8">
-    <title ng-bind-html="pageTitle()">UnPaywall</title>
+    <title ng-bind-html="pageTitle()">Unpaywall</title>
     <meta name="viewport" content="initial-scale=1" />
-    <meta name="google-site-verification" content="9ZfLncZ21UQ_fujN92zThG86oGRlFQaXzEllfP59xqI" />
+    <meta name="google-site-verification" contenst="9ZfLncZ21UQ_fujN92zThG86oGRlFQaXzEllfP59xqI" />
 
 
 
