--- a/static/main.less
+++ b/static/main.less
@@ -245,7 +245,7 @@ div.page.landing {
             color: #FFF59D;
             text-align: center;
             padding-bottom: 10px;
-            font-size: 18px;
+            font-size: 16px;
 
           }
           
@@ -265,6 +265,13 @@ div.page.landing {
             transition: all 0.15s ease;
             &:hover {
               transform: scale(1.03125);
+            }
+
+            .small {
+              font-size: 66%;
+              margin-top: 3px;
+              display: block;
+              text-align: center;
             }
 
             @media @xs {
