--- a/static/main.css
+++ b/static/main.css
@@ -61,12 +61,21 @@ body a:hover {
   margin: 0;
 }
 .page.welcome p.eg {
-  margin: 0 0 10px 45px;
+  margin: 15px 0 36px 35px;
   line-height: 1.3;
 }
 .page.welcome p.eg a {
-  font-size: 125%;
-  display: flex;
+  display: inline-block;
+  cursor: pointer;
+  padding: 20px 30px;
+  border-radius: 3px;
+  background: #20e168;
+  color: #fff;
+  transition: all 0.15s ease;
+}
+.page.welcome p.eg a:hover {
+  transform: scale(1.03125);
+  text-decoration: none;
 }
 .page.welcome p.eg a i {
   margin-right: 8px;
@@ -74,6 +83,7 @@ body a:hover {
 }
 .page.welcome .ps {
   margin-top: 50px;
+  font-size: 80%;
 }
 .page.welcome ul {
   margin: 0 0 30px;
@@ -86,16 +96,13 @@ body a:hover {
   border-radius: 20px 0 0 20px;
   color: #fff;
   padding: 3px 6px 3px 9px;
-  font-size: 16px;
+  font-size: 14px;
 }
 .page.welcome ul li .tab.green {
   background: #20e168;
 }
 .page.welcome ul li .tab.gray {
   background: #888;
-}
-.page.welcome ul li .text {
-  font-weight: bold;
 }
 .page.welcome ul li .text.green {
   color: #20e168;
