--- a/static/main.css
+++ b/static/main.css
@@ -10,6 +10,11 @@ body a {
 body a:hover {
   text-decoration: underline;
 }
+body .main-view {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 .ti-page-header {
   color: #fff;
   margin: 0;
@@ -39,8 +44,12 @@ body a:hover {
   font-size: 16px;
   padding: 10px 20px;
 }
+.page {
+  flex: 1;
+}
 .page h1 {
   font-weight: 300;
+  margin-bottom: 10px;
 }
 .page .content {
   max-width: 900px;
@@ -52,16 +61,20 @@ body a:hover {
   font-size: 20px;
 }
 .page.welcome {
-  padding-top: 100px;
+  padding-top: 150px;
   line-height: 1.4;
   font-size: 20px;
-  min-height: 100vm;
+}
+.page.welcome h2 {
+  font-weight: 300;
+  font-size: 130%;
+  margin-bottom: 10px;
 }
 .page.welcome p {
   margin: 0;
 }
 .page.welcome p.eg {
-  margin: 15px 0 36px 35px;
+  margin: 25px 0 36px 35px;
   line-height: 1.3;
 }
 .page.welcome p.eg a {
@@ -86,7 +99,7 @@ body a:hover {
   font-size: 80%;
 }
 .page.welcome ul {
-  margin: 0 0 30px;
+  margin: 0 0 50px;
 }
 .page.welcome ul li {
   list-style-type: none;
