--- a/static/main.css
+++ b/static/main.css
@@ -65,6 +65,26 @@ body .main-view {
   line-height: 1.4;
   font-size: 20px;
 }
+.page.welcome .top-row {
+  display: flex;
+  align-items: baseline;
+}
+.page.welcome .top-row h1 {
+  margin: 0 0 10px;
+}
+.page.welcome .top-row .spacer {
+  flex: 1;
+}
+.page.welcome .top-row .share {
+  font-size: 16px;
+  margin-right: 50px;
+}
+.page.welcome .top-row .share a {
+  text-decoration: none;
+  padding: 5px 3px;
+  font-size: 30px;
+  color: #20e168;
+}
 .page.welcome h2 {
   font-weight: 300;
   font-size: 130%;
@@ -74,7 +94,7 @@ body .main-view {
   margin: 0;
 }
 .page.welcome p.eg {
-  margin: 25px 0 36px 35px;
+  margin: 15px 0 36px 3px;
   line-height: 1.3;
 }
 .page.welcome p.eg a {
@@ -100,6 +120,7 @@ body .main-view {
 }
 .page.welcome ul {
   margin: 0 0 50px;
+  padding-left: 5px;
 }
 .page.welcome ul li {
   list-style-type: none;
