--- a/static/main.css
+++ b/static/main.css
@@ -65,25 +65,11 @@ body .main-view {
   line-height: 1.4;
   font-size: 20px;
 }
-.page.welcome .top-row {
-  display: flex;
-  align-items: baseline;
+.page.welcome .content {
+  max-width: 700px;
 }
-.page.welcome .top-row h1 {
+.page.welcome h1 {
   margin: 0 0 10px;
-}
-.page.welcome .top-row .spacer {
-  flex: 1;
-}
-.page.welcome .top-row .share {
-  font-size: 16px;
-  margin-right: 50px;
-}
-.page.welcome .top-row .share a {
-  text-decoration: none;
-  padding: 5px 3px;
-  font-size: 30px;
-  color: #20e168;
 }
 .page.welcome h2 {
   font-weight: 300;
@@ -94,7 +80,7 @@ body .main-view {
   margin: 0;
 }
 .page.welcome p.eg {
-  margin: 15px 0 36px 3px;
+  margin: 30px 0;
   line-height: 1.3;
 }
 .page.welcome p.eg a {
@@ -104,6 +90,7 @@ body .main-view {
   border-radius: 3px;
   background: #20e168;
   color: #fff;
+  margin-left: 160px;
   transition: all 0.15s ease;
 }
 .page.welcome p.eg a:hover {
