--- a/static/main.less
+++ b/static/main.less
@@ -102,24 +102,15 @@ body {
   padding-top: 150px;
   line-height: 1.4;
   font-size: 20px;
-  .top-row {
-    display: flex;
-    align-items: baseline;
-    h1 {
-      margin: 0 0 10px;
-    }
-    .spacer {flex: 1;}
-    .share {
-      //font-weight: 300;
-      font-size: 16px;
-      margin-right: 50px;
-      a {
-        text-decoration: none;
-        padding: 5px 3px;
-        font-size: 30px;
-        color: @baseColor;
-      }
-    }
+  .content {
+    max-width: 700px;
+  }
+
+  img#screenshot {
+    //width: 500px;
+  }
+  h1 {
+    margin: 0 0 10px;
   }
 
   h2 {
@@ -130,7 +121,7 @@ body {
   p {
     margin: 0;
     &.eg {
-      margin: 15px 0 36px 3px;
+      margin: 30px 0;
       line-height: 1.3;
       a {
         display: inline-block;
@@ -139,6 +130,7 @@ body {
         border-radius: 3px;
         background: @baseColor;
         color: #fff;
+        margin-left: 160px;
 
         //border: 3px solid #333;
 
