replace blue with bronze.

--- a/static/main.css
+++ b/static/main.css
@@ -295,8 +295,8 @@ div.page.landing .screen div.more div.by a {
 #faq dl dd ul li span.color.green {
   color: #20e168;
 }
-#faq dl dd ul li span.color.blue {
-  color: dodgerblue;
+#faq dl dd ul li span.color.bronze {
+  color: #cd7f32;
 }
 #faq dl dd ul li div.button {
   color: #fff;
