--- a/static/main.less
+++ b/static/main.less
@@ -12,7 +12,7 @@
 
 @oaGold: #f9bc01;
 @oaGreen: #20e168;
-@oaBlue: dodgerblue;
+@oaBronze: #cd7f32;
 
 
 
@@ -372,14 +372,6 @@ div.page.landing {
     }
     dd {
       margin: 0;
-      span.color {
-        //font-weight: bold;
-        //color: #fff;
-        //padding: 5px;
-        //&.gold { background: @oaGold;}
-        //&.green { background: @oaGreen;}
-        //&.blue { background: @oaBlue;}
-      }
       ul {
         li {
           list-style-type: none;
@@ -392,8 +384,7 @@ div.page.landing {
             font-weight: bold;
             &.gold { color: @oaGold;}
             &.green { color: @oaGreen;}
-            &.blue { color: @oaBlue;}
-
+            &.bronze { color: @oaBronze;}
           }
           div.button {
             color: #fff;
