--- a/static/main.less
+++ b/static/main.less
@@ -16,18 +16,20 @@
 
 
 
-// like above, but greener blue
-@gradientTop: @baseColor;
-@gradientBottom: @contrast;
+
+@gradientBottom: #daf2fd;
+@gradientTop: #dafde7;
 
 
 @navbarHeight: 120px;
 
 html {
+  background: #fff;
 }
 
 body {
   margin: 0;
+  background: #fff;
   a {
     text-decoration: none;
     color: @contrast;
@@ -48,21 +50,15 @@ body {
   color: #fff;
   margin: 0;
   padding: 0;
-  position: absolute;
-  top:0;
-  right:0;
-  left:0;
-  z-index: 9;
+  background: #fff;
 
-  background-image: linear-gradient(
-    135deg,
-    @gradientTop, @gradientBottom
-  );
   &.landing-page {
-    background: none;
-    background-image: none;
+    background: transparent;
     a.home {
       display: none;
+    }
+    #site-logo {
+      //filter: grayscale(100%);
     }
   }
 
@@ -72,15 +68,16 @@ body {
     align-items: center;
     padding: 10px;
     a {
-      color: #fff;
+      color: #999;
       font-size: 16px;
-      padding: 10px 20px;
+      padding: 5px 20px;
     }
   }
 }
 
 
 .page {
+  width: 100%;
   h1 {
     font-weight: 300;
     margin-bottom: 10px;
@@ -164,191 +161,188 @@ body {
 
 
 
+
+
+
+
+
+
+
+
 div.page.landing {
-  //margin-top: -@navbarHeight;
+  backgound: #fff;
+  margin: 0 auto;
 
   .screen {
-    backgound: #fff;
-    .content {
-      padding-left: 10px;
-      padding-right: 10px;
-      max-width: 900px;
-      margin: 0 auto;
-      font-size: 20px;
-      line-height: 1.4;
-      h2 {
-        font-weight: 300;
-        text-align: center;
-        font-size: 40px;
-        color: @baseColor;
-      }
-    }
-
     &.top-screen {
+      //background-image: linear-gradient(
+      //  135deg,
+      //  @gradientTop, @gradientBottom
+      //);
+      background: #fff;
 
-      height: 100vh;
-      background-image: linear-gradient(
-        135deg,
-        @gradientTop, @gradientBottom
-      );
-      display:flex;
-      justify-content: center;
-      align-items: center;
-      //@media @sm {
-      //  flex-direction: column;
-      //}
-      position: relative;
-
-
-
-
-      .main-img {
-        margin-right: 50px;
-        @media @xs {
-          display: none;
-        }
-        @media @sm {
-          display:none;
+      .top-screen-content {
+        display: flex;
+        margin-top: 50px;
+        @media @mobile {
+          margin-top: 0;
+          flex-wrap: wrap;
         }
 
-        img {
-          @media @sm {
-            width: 400px;
-          }
-        }
-      }
-
-
-      .main-copy {
-        max-width: 400px;
-        padding: 10px;
-        margin-top: -10px;
-        font-size: 24px;
-        @media @xs {
-          margin-top: 20px;
-          font-size: 18px;
-        }
-        div.tagline {
-          font-weight: 300;
-          font-size: 200%;
-          color: #fff;
-          @media @xs {
-            font-size: 30px;
-            line-height: 1.3;
-          }
-          .above {
-            .tab-word {
-              display: inline-block;
-              //background: @baseColor;
-              
-              border-radius: 40px 0 0 40px;
-              padding: 0 0 0 .35em;
-              font-size: 95%;
-              vertical-align: 2px;
-              border: 2px solid #fff;
-            }
-
-          }
-          .under {
-            white-space: nowrap;
-          }
+        img.screenshot {
+          max-width: 670px;
+          width: 100%;
+          height: 100%;
         }
 
-        div.about {
-          color: #fff;
-          margin-top: 30px;
-          margin-bottom: 80px;
-        }
-
-        .cta {
-          margin-left: -10px;
+        .main-copy {
+          font-size: 24px;
+          margin: -10px 80px 0 80px;
           display: flex;
-          justify-content: center;
-          align-items: center;
           flex-direction: column;
-          
-          .button-info {
-            color: #FFEE58;
-            color: #FFF59D;
-            text-align: center;
-            padding-bottom: 10px;
-            font-size: 16px;
-
+          justify-content: center;
+          @media @xs {
+            margin: 20px;
+            font-size: 18px;
           }
-          
-          .install {
-            cursor: pointer;
-            font-size: 20px;
-            padding: 24px 40px;
-            border-radius: 50px;
-
-            background: #FFEE58;
+          div.tagline {
+            font-weight: 300;
+            font-size: 210%;
             color: #333;
-
-            //background: none;
-            //border: 3px solid #fff;
-            //color: #fff;
-
-            transition: all 0.15s ease;
-            &:hover {
-              transform: scale(1.03125);
-            }
-
-            .small {
-              font-size: 66%;
-              margin-top: 3px;
-              display: block;
-              text-align: center;
-            }
-
             @media @xs {
-              padding: 14px 20px;
-              font-size: 16px;
+              font-size: 30px;
+              line-height: 1.3;
+              font-weight: bold;
             }
+            .above {
+              .tab-word {
+                display: inline-block;
+                //background: @baseColor;
 
+                border-radius: 40px 0 0 40px;
+                padding: 0 0 0 .35em;
+                font-size: 95%;
+                vertical-align: 2px;
+                border: 2px solid #fff;
+              }
+
+            }
+            .under {
+              white-space: nowrap;
+            }
+          }
+
+          div.about {
+            margin: 30px 0;
+            font-size: 80%;
+            .button-info {
+              color: darkred;
+              border-left: 3px solid darkred;
+              padding-left: 20px;
+              max-width:400px;
+            }
+          }
+
+          .cta {
+            .install {
+              cursor: pointer;
+              display: inline-block;
+              font-size: 18px;
+              padding: 28px 45px;
+              border-radius: 10px;
+
+              background: @baseColor;
+              color: #fff;
+              font-weight: bold;
+              transition: all 0.15s ease;
+              &:hover {
+                transform: scale(1.03125);
+              }
+
+              .small {
+                font-size: 66%;
+                display: block;
+                text-align: center;
+              }
+
+              @media @xs {
+                padding: 14px 20px;
+                font-size: 16px;
+              }
+            }
+          }
+
+          .about-users {
+            font-size: 14px;
+            color: #777;
+            margin-top: 50px;
+            padding: 0 0 0 20px;
+            border-left: 3px solid @baseColor;
+            line-height: 1.5;
+            font-weight: 300;
+            .rating {
+              .stars {
+                font-size: 90%;
+                color: #e5c100;
+                color: gold;
+              }
+            }
+            .num-users {
+              .num {
+                font-weight: bold;
+                color: #333;
+              }
+            }
           }
         }
-
-
-
-
       }
-
-
-
-
     }
-
-    div.more {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0px 0 10px;
-      font-size: 14px;
-      .links {
-        a {
-          color: #fff;
-          padding: 10px;
-        }
-      }
-      .spacer {
-        width: 50px;
-      }
-      div.by {
-        color: #fff;
-        padding: 10px;
-        a {
-          color: #fff;
-        }
-      }
-
-    }
-
   }
+  div.more {
+    display: flex;
+    justify-content: center;
+    color: @baseColor;
+    font-size: 22px;
+  }
+
+  div.social-proof {
+    margin-top: 50px;
+    background: #eee;
+    text-align: center;
+    .quote {
+      padding: 50px 0 20px;
+      .content {
+        font-weight: 300;
+        font-size: 40px;
+      }
+      .attribution {
+        font-size: 14px;
+        color: #999;
+        margin-top: 10px;
+      }
+    }
+    .logos {
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+
+      img {
+        height: 23px;
+        margin: 50px 50px;
+        opacity: .3;
+        &.gizmodo {
+          height: 15px;
+        }
+        &.chronicle {
+          height: 30px;
+        }
+      }
+    }
+  }
+
+
 }
 
 
@@ -415,15 +409,16 @@ div.page.landing {
 }
 
 div.footer {
-  //background: @baseColor;
-  background-image: linear-gradient(
-        135deg,
-        @gradientTop, @gradientBottom
-      );
+  //background-image: linear-gradient(
+  //      135deg,
+  //      @gradientTop, @gradientBottom
+  //    );
+
+  background: @baseColor;
 
 
   padding: 50px 20px;
-  margin-top: 150px;
+  //margin-top: 150px;
   color: #fff;
   .content {
     max-width: 900px;
@@ -435,11 +430,11 @@ div.footer {
       }
     }
     .links {
-      font-size: 18px;
+      font-size: 26px;
       text-align: right;
       margin-bottom: 50px;
       a {
-        margin: 0 30px 0 0;
+        margin: 0 20px 0 0;
         display: block;
         float: left;
         padding-bottom: 10px;
@@ -458,7 +453,7 @@ div.footer {
       }
     }
     .credit {
-      font-size: 14px;
+      font-size: 16px;
       line-height: 1.4;
       text-align: right;
       @media @xs {
