--- a/static/main.less
+++ b/static/main.less
@@ -318,8 +318,8 @@ div.page.landing {
     .quote {
       padding: 50px 0 20px;
       .content {
-        font-weight: 300;
-        font-size: 40px;
+        font-weight: bold;
+        font-size: 26px;
       }
       .attribution {
         font-size: 14px;
@@ -354,6 +354,10 @@ div.page.landing {
     border-bottom: 1px solid #ddd;
     justify-content: center;
     padding: 100px 0;
+    h2 {
+      font-size: 32px;
+      font-weight: bold;
+    }
 
     &.effective {
       background: #eee;
@@ -373,12 +377,14 @@ div.page.landing {
     }
 
     .copy {
-      max-width: 400px;
+      max-width: 500px;
       display: flex;
       flex-direction: column;
       justify-content: center;
       //margin: 0 auto;
       margin: 0 10%;
+      font-size: 20px;
+      line-height: 1.3;
     }
 
   }
