--- a/static/main.less
+++ b/static/main.less
@@ -97,6 +97,21 @@ body {
   font-size: 20px;
 }
 
+.page.sources {
+  table.repos {
+    tr {
+      td {
+        border-bottom: 1px solid #eee;
+        padding: 10px;
+        &.inst {
+          max-width: 300px;
+        }
+      }
+    }
+  }
+}
+
+
 .page.welcome {
   padding-top: 150px;
   line-height: 1.4;
@@ -437,6 +452,8 @@ div.page.landing {
     }
   }
 }
+
+
 
 
 #faq {
