repos table sorts correctly.

--- a/static/main.less
+++ b/static/main.less
@@ -98,7 +98,19 @@ body {
 }
 
 .page.sources {
+  padding-top: 100px;
+  line-height: 1.4;
+  font-size: 20px;
+  h1 {
+    display: flex;
+    justify-content: space-between;
+  }
   table.repos {
+    margin-top: 70px;
+    th {
+      text-align: left;
+      padding: 10px;
+    }
     tr {
       td {
         border-bottom: 1px solid #eee;
