--- a/static/main.css
+++ b/static/main.css
@@ -59,6 +59,22 @@ body .main-view {
   line-height: 1.4;
   font-size: 20px;
 }
+.page.sources {
+  padding-top: 100px;
+  line-height: 1.4;
+  font-size: 20px;
+}
+.page.sources h1 {
+  display: flex;
+  justify-content: space-between;
+}
+.page.sources table.repos {
+  margin-top: 70px;
+}
+.page.sources table.repos th {
+  text-align: left;
+  padding: 10px;
+}
 .page.sources table.repos tr td {
   border-bottom: 1px solid #eee;
   padding: 10px;
