--- a/static/main.less
+++ b/static/main.less
@@ -105,21 +105,24 @@ body {
     display: flex;
     justify-content: space-between;
   }
-  table.repos {
+  .main {
     margin-top: 70px;
-    th {
-      text-align: left;
-      padding: 10px;
-    }
-    tr {
-      td {
-        border-bottom: 1px solid #eee;
+    table.repos {
+      th {
+        text-align: left;
         padding: 10px;
-        &.inst {
-          max-width: 300px;
+      }
+      tr {
+        td {
+          border-bottom: 1px solid #eee;
+          padding: 10px;
+          &.inst {
+            max-width: 300px;
+          }
         }
       }
     }
+
   }
 }
 
